-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P3
-
Affects Version/s: 10
-
Component/s: hotspot
-
b40
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8195577 | 11 | Roland Westrelin | P3 | Resolved | Fixed | b01 |
| JDK-8197718 | 10u-cpu | Roland Westrelin | P3 | Resolved | Fixed | master |
| JDK-8200987 | 10.0.2 | Unassigned | P3 | Resolved | Fixed | b01 |
| JDK-8195928 | 10.0.1 | Roland Westrelin | P3 | Resolved | Fixed | b01 |
In PhaseIdealLoop::create_outer_strip_mined_loop():
while (be->is_Store() && old_new[be->_idx] != NULL) {
ShouldNotReachHere();
be = be->in(MemNode::Memory);
}
and
while (be->is_Store() && old_new[be->_idx] != NULL) {
ShouldNotReachHere();
be = be->in(MemNode::Memory);
}
This code would trigger with sunk stores and stores on backedge. I couldn't trigger it with a test case and it wasn't caught by testing. Still, if this happens in the wild it would cause a crash.
while (be->is_Store() && old_new[be->_idx] != NULL) {
ShouldNotReachHere();
be = be->in(MemNode::Memory);
}
and
while (be->is_Store() && old_new[be->_idx] != NULL) {
ShouldNotReachHere();
be = be->in(MemNode::Memory);
}
This code would trigger with sunk stores and stores on backedge. I couldn't trigger it with a test case and it wasn't caught by testing. Still, if this happens in the wild it would cause a crash.
- backported by
-
JDK-8195577 Loop Strip Mining has some leftover debugging code
-
- Resolved
-
-
JDK-8195928 Loop Strip Mining has some leftover debugging code
-
- Resolved
-
-
JDK-8197718 Loop Strip Mining has some leftover debugging code
-
- Resolved
-
-
JDK-8200987 Loop Strip Mining has some leftover debugging code
-
- Resolved
-
- relates to
-
JDK-8186027 C2: loop strip mining
-
- Resolved
-