8194993: Loop Strip Mining has some leftover debugging code

Removed debugging code.

Reviewed-by: thartmann